<resources>
    <string name="app_name">Top News</string>
    <string name="top_news">Top News</string>
    <string name="saved_news">Saved News</string>
    <string name="search_news">Search News</string>
    <string name="description">Description</string>
    <string name="title">title</string>
    <string name="source">Source</string>
    <string name="todo">News Image</string>
    <string name="date_of_publication">date of publication</string>
    <string name="search">Search…</string>
    <string name="save_button">save button</string>
</resources>